// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WebBookmark> Snapshots and structure should render correctly 1`] = `
<div
  className="lumx-web-bookmark lumx-web-bookmark--size-regular lumx-web-bookmark--theme-light"
>
  <div
    className="lumx-web-bookmark__wrapper"
  >
    <div
      className="lumx-web-bookmark__thumbnail"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image=""
        onClick={[Function]}
        role="link"
        tabIndex={0}
      />
    </div>
    <div
      className="lumx-web-bookmark__container"
    >
      <div
        className="lumx-web-bookmark__title"
      >
        <Link
          color="dark"
          colorVariant="N"
          href=""
          target="_blank"
        />
      </div>
      <p
        className="lumx-web-bookmark__description"
      />
      <div
        className="lumx-web-bookmark__link"
      >
        <Link
          className="lumx-web-bookmark__link"
          color="blue"
          colorVariant="N"
          href=""
          target="_blank"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<WebBookmark> Snapshots and structure should render correctly 2`] = `
<div
  className="lumx-web-bookmark lumx-web-bookmark--size-big lumx-web-bookmark--theme-light"
>
  <div
    className="lumx-web-bookmark__wrapper"
  >
    <div
      className="lumx-web-bookmark__thumbnail"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image=""
        onClick={[Function]}
        role="link"
        tabIndex={0}
      />
    </div>
    <div
      className="lumx-web-bookmark__container"
    >
      <div
        className="lumx-web-bookmark__title"
      >
        <Link
          color="dark"
          colorVariant="N"
          href=""
          target="_blank"
        />
      </div>
      <p
        className="lumx-web-bookmark__description"
      />
      <div
        className="lumx-web-bookmark__link"
      >
        <Link
          className="lumx-web-bookmark__link"
          color="blue"
          colorVariant="N"
          href=""
          target="_blank"
        />
      </div>
    </div>
  </div>
</div>
`;
